My Second Commit

--- a/FunWithJs/index.html
+++ b/FunWithJs/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trial</title>
+        <title>Portfolio</title>
     </head>
     <body>
-        <P>Hello World</P>
+        <!-- Menu -->
+        <nav id="menu">
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="3dprinting.html">Android Development</a></li>
+                <li><a href="webdev.html">Front End Web Development</a></li>
+                <li><a href="cgi.html">Computer Graphics</a></li>
+            </ul>
+        </nav> 
     </body>
 </html>
